--- a/salon.html
+++ b/salon.html
@@ -197,7 +197,7 @@
                         <br>
                         <h2>Upcoming sessions</h2>
                         <br>
-                        <h3>FAIR USE/FAIR DEALING (date and time TBA)</h3>
+                        <h3>FAIR USE/FAIR DEALING (17 October 2024, 9am PDT/noon EDT/5pm BST/6pm CEST)</h3>
                         <br>
                         
                         <h2>Past sessions</h2> 
