--- a/salon.html
+++ b/salon.html
@@ -197,10 +197,11 @@
                         <br>
                         <h2>Upcoming sessions</h2>
                         <br>
-                        <h3>FAIR USE/FAIR DEALING (17 October 2024, 9am PDT/noon EDT/5pm BST/6pm CEST)</h3>
-                        <br>
-                        
+                        <h3>PRINT & LIBRARY SALES (23 January 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
+                        <br>            
                         <h2>Past sessions</h2> 
+                        <br>
+                        <h3>FAIR USE/FAIR DEALING (17 October 2024)</h3>
                         <br>
                         <h3><a href="https://scholarled.pubpub.org/pub/salon-links#what-is-scholar-led-22-may-2024
 ">WHAT IS SCHOLAR-LED?</a> (23 May 2024)</h3>
