update Salon page

--- a/salon.html
+++ b/salon.html
@@ -197,12 +197,16 @@
                         <br>
                         <h2>Upcoming sessions</h2>
                         <br>
-                        <h3>PRINT & LIBRARY SALES (23 January 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
+                        <h3>THOTH CHECK-IN (13 March 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
                         <br>            
+                        <h3>TYPESETTING (8 MAY 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
+                        <br>       
                         <h2>Past sessions</h2> 
                         <br>
-                        <h3>FAIR USE/FAIR DEALING (17 October 2024)</h3>
+                        <h3>PRINT & LIBRARY SALES (23 January 2025)</h3>
                         <br>
+                        <br>
+                        <h3>FAIR USE/FAIR DEALING (17 October 2024)</h3>
                         <h3><a href="https://scholarled.pubpub.org/pub/salon-links#what-is-scholar-led-22-may-2024
 ">WHAT IS SCHOLAR-LED?</a> (23 May 2024)</h3>
                         <br>
