Update salon page

--- a/salon.html
+++ b/salon.html
@@ -205,10 +205,9 @@
                         <br>
                         <h3>PRINT & LIBRARY SALES (23 January 2025)</h3>
                         <br>
-                        <br>
                         <h3>FAIR USE/FAIR DEALING (17 October 2024)</h3>
-                        <h3><a href="https://scholarled.pubpub.org/pub/salon-links#what-is-scholar-led-22-may-2024
-">WHAT IS SCHOLAR-LED?</a> (23 May 2024)</h3>
+                        <br>
+                        <h3><a href="https://scholarled.pubpub.org/pub/salon-links#what-is-scholar-led-22-may-2024">WHAT IS SCHOLAR-LED?</a> (23 May 2024)</h3>
                         <br>
                         <h3><a href="https://scholarled.pubpub.org/pub/salon-links#usage-analytics-28-march-2024">USAGE ANALYTICS</a> (28 March 2024)</h3>
                         <br>
