Update with form

--- a/salon.html
+++ b/salon.html
@@ -223,6 +223,7 @@
                 </div>
 
             </div>
+            <script async src="https://eocampaign1.com/form/de97fb38-fc67-11ef-982e-3f9b575f27d1.js" data-form="de97fb38-fc67-11ef-982e-3f9b575f27d1"></script>
         </section>
         <!--End of Salon-->
 
