Update salon page

--- a/salon.html
+++ b/salon.html
@@ -199,7 +199,7 @@
                         <br>
                         <h3>THOTH CHECK-IN (13 March 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
                         <br>            
-                        <h3>TYPESETTING (8 MAY 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
+                        <h3>TYPESETTING (8 MAY 2025, 7am PDT/10am EDT/4pm BST/5pm CEST)</h3>
                         <br>       
                         <h2>Past sessions</h2> 
                         <br>
