--- a/salon.html
+++ b/salon.html
@@ -201,11 +201,14 @@
                         <br>
                         <h2>Upcoming sessions</h2>
                         <br>         
-                        <h3>TYPESETTING (8 MAY 2025, 7am PDT/10am EDT/4pm BST/5pm CEST)</h3>
+                        <h3>MARKETING AND OUTREACH (18 SEPTEMBER 2025, 7am PDT/10am EDT/4pm BST/5pm CEST)</h3>
                         <br>       
                         <h2>Past sessions</h2> 
+                        <br>         
+                        <h3>TYPESETTING (8 MAY 2025)</h3>
+                        <br> 
                         <br>                        
-                        <h3>THOTH CHECK-IN (13 March 2025, 8am PST/11am EST/4pm Gmt/5pm CET)</h3>
+                        <h3>THOTH CHECK-IN (13 March 2025)</h3>
                         <br>   
                         <h3>PRINT & LIBRARY SALES (23 January 2025)</h3>
                         <br>
